--- a/index.html
+++ b/index.html
@@ -1,307 +1,11 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/html4/loose.dtd">
 
 <html>
 <head>
+  <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>.: Sobrinho Manifesto :.</title>
   <script type="text/javascript">
   //<![CDATA[
@@ -380,7 +84,7 @@ function titlebar(val)
 titlebar(0);
 </script> <!--   Script by hscripts.com     -->
 </head>
-<body BACKGROUND="banana.gif" bgcolor="#FFFFFF" style="height:3100px;" ondragstart="return false" onselectstart="return false" onLoad="alert('Bem-vindo ao Sobrinho Manifesto\r\rUma parceria de:\r\rSobrinho Webdesigner & BrazilJS Foundation\r\rNão esqueça de seguir a gente no orkut, no twitter e no facebook!')">
+<body BACKGROUND="banana.gif" bgcolor="#FFFFFF" style="height:3100px;" ondragstart="return false" onselectstart="return false" onLoad="alert('Bem-vindo ao Sobrinho Manifesto\r\rUma parceria de:\r\rSobrinho Webdesigner & BrazilJS Foundation\r\rNÃ£o esqueÃ§a de seguir a gente no orkut, no twitter e no facebook!')">
 <object data="mahna.mid" type="application/x-mplayer2" width="0" height="0">
 <param name="filename" value="mahna.mid">
 <param name="playcount" value="2">
@@ -413,11 +117,11 @@ tripleflapInit();
 	<center><table bgcolor="white" width="100%"><tr><td>
 	<center><h1><font face="comic sans ms">Sobrinho Manifesto</font></h1></center>
 
-<font face="comic sans ms" size="2"><p>Uma classe profissional muito peculiar vem se fortalecendo nos últimos anos: os sobrinhos. Não importa se você é designer ou desenvolvedor, com certeza já encontrou algum cliente que sempre tem um sobrinho que “entende do assunto” e faria o seu trabalho cobrando meio big mac.</p>
+<font face="comic sans ms" size="2"><p>Uma classe profissional muito peculiar vem se fortalecendo nos Ãºltimos anos: os sobrinhos. NÃ£o importa se vocÃª Ã© designer ou desenvolvedor, com certeza jÃ¡ encontrou algum cliente que sempre tem um sobrinho que entende do assunto e faria o seu trabalho cobrando meio big mac.</p>
 
-<p>A desinformação dos clientes e a prostituição desses “profissionais” não cria só pérolas em sites de humor. Cada projeto que cai na mão de um sobrinho reforça a idéia de que um resultado "nas coxas" é aceitável, e que o profissional é apenas um apertador de botão, um “peão” mal-pago. O sobrinho nivela o mercado por baixo.</p>
+<p>A desinformaÃ§Ã£o dos clientes e a prostituiÃ§Ã£o desses profissionais nÃ£o cria pÃ©rolas em sites de humor. Cada projeto que cai na mÃ£o de um sobrinho reforÃ§a a idÃ©ia de que um resultado "nas coxas" aceitÃ¡vel, e que o profissional Ã© apenas um apertador de botÃ£o, um peÃ£o mal-pago. O sobrinho nivela o mercado por baixo.</p>
 
-<p>Só há uma forma de virar o jogo: se aprimorar constantemente e educar os clientes sobre a importância de um projeto levado a sério desde os primeiros passos. Mas isso dá muito trabalho... Pra que ameaçar sua zona de conforto? Pare de nadar contra a maré! Renda-se ao lado negro da força... Afinal, se não é possível vencê-los, una-se a eles!</font>
+<p>SÃ³ hÃ¡ uma forma de virar o jogo: se aprimorar constantemente e educar os clientes sobre a importÃ¢ncia de um projeto levado a sÃ©rio desde os primeiros passos. Mas isso dÃ¡ muito trabalho... Pra que ameaÃ§ar sua zona de conforto? Pra que ameaÃ§ar sua zona de conforto? Pare de nadar contra a marÃ©! Renda-se ao lado negro da forÃ§a... Afinal, se nÃ£o Ã© possÃ­vel vencÃª-los, una-se a eles!</font>
 	</td></tr></table></center>
 	<br>
     <table cellpadding="10" border="1" width="100%" bgcolor="white">
@@ -427,7 +131,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Você sempre sabe tudo, pode tudo, domina qualquer tecnologia que o cliente disser que precisa. Não importa qual seja a demanda ou o skillset necessário. Você é bom até em tecnologias que nunca ouviu falar. Aliás, principalmente nessas. </font></td>
+	    <td><font face="comic sans ms" size="2">VocÃª sempre sabe tudo, pode tudo, domina qualquer tecnologia que o cliente disser que precisa. NÃ£o importa qual seja a demanda ou o skillset necessÃ¡rio. VocÃª Ã© bom atÃ© em tecnologias que nunca ouviu falar. AliÃ¡s, principalmente nessas. </font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>2</b></font></center></td>
@@ -435,7 +139,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">“Não” é uma palavra que não existe mais, apague ela do seu dicionário. Jamais diga para o cliente “isso aí eu me recuso a fazer”. Aceite todo tipo de sugestão: GIF animado, música de fundo, página de links ou qualquer idéia. Aproveite e acrescente outras, igualmente brilhantes.  </font></td>
+	    <td><font face="comic sans ms" size="2">"NÃ£o" Ã© uma palavra que nÃ£o existe mais, apague ela do seu dicionÃ¡rio. Jamais diga para o cliente "isso aÃ­ eu me recuso a fazer". Aceite todo tipo de sugestÃ£o: GIF animado, mÃºsica de fundo, pÃ¡gina de links ou qualquer ideia. Aproveite e acrescente outras, igualmente brilhantes.  </font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>3</b></font></center></td>
@@ -443,7 +147,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Você é o <i>menino da informática</i>, não se restrinja a só criar o site do cliente. Tudo que precisar <i>mexer no computador</i> é você quem faz: crie a <i>logomarca</i> no Corel. <i>Programe em HTML</i>... no FrontPage. <i>Faça um facebook</i> para a empresa do cliente. Desenvolva um <i>sisteminha</i> no Office e se ofereça para <i>formatar o Windows</i> do cliente. O verdadeiro sobrinho é multitarefa!</font></td>
+	    <td><font face="comic sans ms" size="2">VocÃª Ã© o <i>menino da informÃ¡tica</i>, nÃ£o se restrinja a sÃ³ criar o site do cliente. Tudo que precisar <i>mexer no computador</i> Ã© vocÃª quem faz: crie a <i>logomarca</i> no Corel. <i>Programe em HTML</i>... no FrontPage. <i>FaÃ§a um Facebook</i> para a empresa do cliente. Desenvolva um <i>sisteminha</i> no Office e se ofereÃ§a para <i>formatar o Windows</i> do cliente. O verdadeiro sobrinho Ã© multitarefa!</font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>4</b></font></center></td>
@@ -451,7 +155,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Entregue o seu resultado enquanto a concorrência ainda está fazendo o esboço! Pule etapas desnecessárias como briefing, especificações, escopo, backup, testes, validação, documentação, versionamento, correção de bugs... O cliente nem vai sentir falta dessas frescuras! Ele nem sabe que isso existe, não é você quem vai ficar inventando moda. </font></td>
+	    <td><font face="comic sans ms" size="2">Entregue o seu resultado enquanto a concorrÃªncia ainda estÃ¡ fazendo o esboÃ§o! Pule etapas desnecessÃ¡rias como briefing, especificaÃ§Ãµes, escopo, backup, testes, validaÃ§Ã£o, documentaÃ§Ã£o, versionamento, correÃ§Ã£o de bugs... O cliente nem vai sentir falta dessas frescuras! Ele nem sabe que isso existe, nÃ£o Ã© vocÃª quem vai ficar inventando moda.</font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>5</b></font></center></td>
@@ -459,7 +163,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Nenhum valor deve ser baixo demais para você. Cobre sempre, SEMPRE menos que o orçamento da concorrência. Aliás, nem precisa fazer orçamento. Pura perda de tempo. Tenha um preço padrão e cobre a mesma coisa pra todo mundo. Quanto mais barato, melhor. </font></td>
+	    <td><font face="comic sans ms" size="2">Nenhum valor deve ser baixo demais para vocÃª. Cobre sempre, SEMPRE menos que o orÃ§amento da concorrÃªncia. AliÃ¡s, nem precisa fazer orÃ§amento. Pura perda de tempo. Tenha um preÃ§o padrÃ£o e cobre a mesma coisa pra todo mundo. Quanto mais barato, melhor. </font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>6</b></font></center></td>
@@ -467,7 +171,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Adote modismos. Descubra o que todo está fazendo e imite. Não precisa fazer igual, basta dizer pro cliente que o site dele tem as tais tecnologias do momento. Web 2.0, ecommerce, flash, cloud, HTML5, mobile, responsivo, social, decore esses buzzwords. Não precisa saber o que significa. Nem saber usar. Só não esqueça de incluir no projeto.</font></td>
+	    <td><font face="comic sans ms" size="2">Adote modismos. Descubra o que todo mundo estÃ¡ fazendo e imite. NÃ£o precisa fazer igual, basta dizer pro cliente que o site dele tem as tais tecnologias do momento. Web 2.0, e-commerce, flash, cloud, HTML5, mobile, responsivo, social, decore esses buzzwords. NÃ£o precisa saber o que significa. Nem saber usar. SÃ³ nÃ£o esqueÃ§a de incluir no projeto.</font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>7</b></font></center></td>
@@ -475,7 +179,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Fuja de qualquer tipo de trabalho. Não aprenda, não pesquise, não pense. Não perca tempo estudando. Nunca, jamais leia um livro. Quando surgir uma dúvida que você não saiba resolver (ou seja, sempre), <b>não use o google</b>: crie tópicos em fóruns com títulos como “SOCORRO”, “ME AJUDEM” ou “URGENTE” e fique esperando te entregarem a solução de mão-beijada.</font></td>
+	    <td><font face="comic sans ms" size="2">Fuja de qualquer tipo de trabalho. NÃ£o aprenda, nÃ£o pesquise, nÃ£o pense. NÃ£o perca tempo estudando. Nunca, jamais leia um livro. Quando surgir uma dÃºvida que vocÃª nÃ£o saiba resolver (ou seja, sempre), <b>nÃ£o use o Google</b>: crie tÃ³picos em fÃ³runs com tÃ­tulos como "SOCORRO", "ME AJUDEM" ou "URGENTE" e fique esperando te entregarem a soluÃ§Ã£o de mÃ£o-beijada.</font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>8</b></font></center></td>
@@ -483,7 +187,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Abuse de ferramentas <i>point-and-click WYSIWYG</i> que geram o código sozinhas. Nunca resolva nada com uma solução desenvolvida por você: Seja um adepto do reaproveitamendo de código (dos outros). Copie direto pra produção, sem alterar nada, os exemplos dos tutoriais. Um scriptzinho pronto aqui, um pluginzinho ali, um <a href="https://www.facebook.com/groups/wordpress.brasil/search/?query=xml%20amigo" target="_blank">xml amigo</a> acolá...</font></td>
+	    <td><font face="comic sans ms" size="2">Abuse de ferramentas <i>point-and-click WYSIWYG</i> que geram o cÃ³digo sozinhas. Nunca resolva nada com uma soluÃ§Ã£o desenvolvida por vocÃª: Seja um adepto do reaproveitamento de cÃ³digo (dos outros). Copie direto para produÃ§Ã£o, sem alterar nada, os exemplos dos tutoriais. Um scriptzinho pronto aqui, um pluginzinho ali, um <a href="https://www.facebook.com/groups/wordpress.brasil/search/?query=xml%20amigo" target="_blank">xml amigo</a> acolÃ¡...</font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>9</b></font></center></td>
@@ -491,7 +195,7 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Pra que pagar por domínio, hospedagem e banda? Faça o site do seu cliente no blogspot! Não contrate fotógrafo nem designer, copie direto do Google Images. Os layouts “premium” e plugins pagos você baixa no torrent. Tudo que está na internet é grátis! </font></td>
+	    <td><font face="comic sans ms" size="2">Para que pagar por domÃ­nio, hospedagem e banda? FaÃ§a o site do seu cliente no blogspot! NÃ£o contrate fotÃ³grafo nem designer, copie direto do Google Images. Os layouts "premium" e plugins pagos vocÃª baixa no torrent. Tudo que estÃ¡ na internet Ã© grÃ¡tis! </font></td>
 	  </tr>
       <tr>
         <td><center><font face="comic sans ms" size="7"><b>10</b></font></center></td>
@@ -499,18 +203,18 @@ tripleflapInit();
       </tr>
 	  <tr>
 	    <td></td>
-	    <td><font face="comic sans ms" size="2">Adie indefinidamente qualquer alteração que o cliente pedir. Empurre com a barriga a correção dos bugs e a remoção daqueles malwares que você pegou nos temas premium do torrent. Finalize com o Chá de Sumiço©. Modo de preparo: Pare de responder mais emails, fique invisível no MSN, bloqueie no facebook e no twitter, e se precisar mude até de telefone. Ingredientes: Um (1) abacaxi e uma (1) batata-quente na mão do cliente. Ele vai ficar desesperado, espernear, chorar, tentar te matar e/ou ameaçar com processo. Não se dê por vencido, e parta atrás da próxima vítima.</font></td>
+	    <td><font face="comic sans ms" size="2">Adie indefinidamente qualquer alteraÃ§Ã£o que o cliente pedir. Empurre com a barriga a correÃ§Ã£o dos bugs e a remoÃ§Ã£o daqueles malwares que vocÃª pegou nos temas premium do torrent. Finalize com o ChÃ¡ de SumiÃ§o. Modo de preparo: Pare de responder mais emails, fique invisÃ­vel no MSN, bloqueie no Facebook e no Twitter, e se precisar mude atÃ© de telefone. Ingredientes: Um (1) abacaxi e uma (1) batata-quente na mÃ£o do cliente. Ele vai ficar desesperado, espernear, chorar, tentar te matar e/ou ameaÃ§ar com processo. NÃ£o se dÃª por vencido, e parta atrÃ¡s da prÃ³xima vÃ­tima.</font></td>
 	  </tr>
     </table>
 	<table bgcolor=white width="100%"><tr><td><font size="3" color=black bgcolor=red><b>Dicas de leitura:</b></font></td></tr>
 	<tr><td><font size="2" color=black bgcolor=red><a href="http://www.carlostristacci.com.br/blog/extreme-go-horse-xgh/" target="_blank">eXtreme Go Horse</a></font></td></tr>
-	<tr><td><font size="2" color=black bgcolor=red><a href="http://desciclopedia.ws/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">POG: Programação Orientada a Gambiarra</a></font></td></tr>
+	<tr><td><font size="2" color=black bgcolor=red><a href="http://desciclopedia.ws/wiki/Programa%C3%A7%C3%A3o_Orientada_a_Gambiarras" target="_blank">POG: ProgramaÃ§Ã£o Orientada a Gambiarra</a></font></td></tr>
 	</table>
     <br>
 	<table><tr><td>
 	<center><img border="0" src="anybrowser.gif">&nbsp;&nbsp;&nbsp;<img border="0" src="ie4_animated.gif"></center>
 	<br>
-	<center><font face="comic sans ms" size="3"><b>Já tivemos <img border="0" src="http://cc.amazingcounters.com/counter.php?i=3111752&amp;c=9335569"> visitas</b></font></center></td>
+	<center><font face="comic sans ms" size="3"><b>JÃ¡ tivemos <img border="0" src="http://cc.amazingcounters.com/counter.php?i=3111752&amp;c=9335569"> visitas</b></font></center></td>
 	<td>
 <table border=0 bgcolor="white">
 <tr>
